Version 1.2 -
    Site Features
        * Game archive, search
        * GNU Go handicap, color chooser
    Embedded SGF Player Features
        * View-only mode
        * Edit game info tool
        * Clear marker tool
        * Prompt to delete move when all properties are removed
        * "Jump to move" tool
        * French, Spanish, and Portuguese translations
        * New example using <iframe> that activates keyboard shortcuts only
          when the Player has focus
        * Refactored internal game tree structures to support future features
          such as collaborative editing
    Bug fixes
        * Multiple KGS comments no longer mess up SGF upon saving to server
        * Non-regular board sizes open as 19x19 instead of breaking

Version 1.1 - Jan 21 2008
    Features
        * Problem mode, crop/shrink-to-fit option
        * Score estimate (server-side)
        * Decoupled Player from BoardRenderer, which opens the door for
          alternative kinds of board renderers, like Flash
        * Proof-of-concept Flash board renderer
    Bug fixes
        * Messed up or missing coordinates display
        * Pass causing errant stone to be placed on board when skipping ahead
        * Error for multiple game info properties within same node